@@ -1,3 +1,8 @@
+2008-01-29  Emilio Meschi  <emilio.meschi@cern.ch>
+	* tag V01-05-02
+	* fix generation of timestamp from gettimeofday
+	* many fixes by Bill not reported here from intermediate tags
+	
 2007-10-05  Emilio Meschi  <emilio.meschi@cern.ch>
 	* tag V01-02-02
 	* fix bug in DaqSource::readLuminosityBlock_ causing a crash when run is ended without 
